23-Deploy-staging-frontend-chimu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging-frontend-chimu
  namespace: dev
  labels:
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: staging-frontend-chimu
  template:
    metadata:
      labels:
        app: staging-frontend-chimu
        tier: frontend
    spec:
      imagePullSecrets:
        - name: cregistry-bq-secret
      containers:
        - name: staging-frontend-chimu
          image: gcr.io/chimu-335413/staging-frontend-chimu:v1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "50Mi"
              cpu: "100m"
            limits:
              memory: "100Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: staging-frontend-chimu-svc
  namespace: dev
spec:
  type:  ClusterIP
  selector:
    app: staging-frontend-chimu
  ports:
  - protocol: TCP
    port:  8080
    targetPort:  80
    name: tcp-8080
